--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Tina (Qiaochu) Liu # your name (or website title) here
+color: black
 logo: "/images/Tina.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Scientist
