--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: Tina (Qiaochu) Liu # your name (or website title) here
+bg: green
 color: black
+style: center
+
 logo: "/images/Tina.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Scientist
