--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,10 @@ style: center
 
 logo: "/images/Tina-modified.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
+  <br><br>
   Hi! Welcome to my website!
   <br><br>
-  I'm currently achieving my master degree in Data Science at University of San Francisco. I'm interested in Machine Learning.
+  I'm currently achieving my master degree in Data Science at University of San Francisco and working at Reputation as a Data Scientist Intern. 
   <br><br>
   <a href="https://www.linkedin.com/in/tina-liu46/">View My LinkedIn Profile</a> 
   
